Add URL as annotations

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,18 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
+	<!-- Annotations
+	Check this:
+	   * http://www.nuclearprojects.com/xplane/info.shtml
+	     Explain how the UDP sent fro X-Plane, save this bookmark
+	     
+	   * http://www.nuclearprojects.com/xplane/xplaneref.html
+	     UDP X-Plane reference
+	     
+	   * http://www.heimetli.ch/udp/UDPClient.html
+	     Simple Java UDP Client
+	-->
 
 	<dependencies>
 		<dependency>
@@ -43,11 +55,5 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.8.5</version>
 		</dependency>
-
-
-
-
-
-
 	</dependencies>
 </project>
