--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
 	     
 	   * http://www.heimetli.ch/udp/UDPClient.html
 	     Simple Java UDP Client
+	     
+	   * http://loading.io/
+	     Icons loading
 	-->
 
 	<dependencies>
