--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 	     Simple Java UDP Client
 	     
 	   * http://loading.io/
+	     http://preloaders.net/ (aviaozinho)
 	     Icons loading
 	-->
 
