--- a/pom.xml
+++ b/pom.xml
@@ -45,3 +45,286 @@
 		</dependency>
 	</dependencies>
 </project>
+
+<!--   *********************************************** DaemonThreads
+package br.ujr.xplane.comm;
+
+public abstract class DaemonThreads extends Thread {
+	
+	protected boolean runState = true;
+	
+	public DaemonThreads() {
+		this.setDaemon(true);
+	}
+
+	public boolean isRunState() {
+		return runState;
+	}
+
+	public void setRunState(boolean runState) {
+		this.runState = runState;
+	}
+	
+
+}
+-->
+
+<!--   *********************************************** UDPSender
+package br.ujr.xplane.comm;
+
+import java.io.IOException;
+import java.net.DatagramPacket;
+import java.net.DatagramSocket;
+import java.net.InetAddress;
+import java.net.SocketException;
+import java.net.UnknownHostException;
+import java.nio.ByteBuffer;
+import java.util.concurrent.ArrayBlockingQueue;
+import java.util.concurrent.BlockingQueue;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import br.ujr.xplane.comm.message.DATAMessage;
+
+public class UDPSender extends DaemonThreads {
+
+	public static Logger				logger	= LoggerFactory.getLogger(UDPSender.class);
+
+	private DatagramSocket				datagramSocket;
+	private int							port;
+	private String						ipAddress;
+	private BlockingQueue<DATAMessage>	messageQueue;
+
+	public UDPSender(String ipAddress, int port) throws SocketException, UnknownHostException {
+		super();
+		this.port = port;
+		this.ipAddress = ipAddress;
+		datagramSocket = new DatagramSocket();
+		messageQueue = new ArrayBlockingQueue<DATAMessage>(5000, true);
+	}
+
+	public void sendDATAMessage(DATAMessage message) {
+		send(message.toByteBuffer());
+	}
+
+	public void send(ByteBuffer bb) {
+		send(bb.array());
+	}
+
+	public void send(byte[] buffer) {
+		try {
+			datagramSocket.send(new DatagramPacket(buffer, buffer.length, InetAddress.getByName(ipAddress), port));
+		} catch (UnknownHostException e) {
+			logger.error(e.getMessage(), e);
+			throw new RuntimeException(e);
+		} catch (IOException e) {
+			logger.error(e.getMessage(), e);
+			throw new RuntimeException(e);
+		}
+	}
+
+	public void run() {
+		while (this.runState) {
+			if (messageQueue.size() > 0) {
+
+				int bufferSize = messageQueue.size() * 36 + 5;
+				if (bufferSize > 41) {
+					bufferSize = 41;
+				}
+				ByteBuffer byteBuffer = ByteBuffer.allocate(bufferSize);
+				DATAMessage m = messageQueue.poll();
+				byteBuffer.put(m.toByteBuffer().array());
+				send(byteBuffer);
+				try {
+					sleep(100);
+				} catch (InterruptedException e) {
+					logger.warn(e.getMessage(), e);
+				}
+			}
+		}
+	}
+
+	public int getPort() {
+		return port;
+	}
+
+	public void setPort(int port) {
+		this.port = port;
+	}
+
+	public String getIpAddress() {
+		return ipAddress;
+	}
+
+	public void setIpAddress(String ipAddress) {
+		this.ipAddress = ipAddress;
+	}
+
+	public BlockingQueue<DATAMessage> getMessageQueue() {
+		return messageQueue;
+	}
+
+	public void setMessageQueue(BlockingQueue<DATAMessage> messageQueue) {
+		this.messageQueue = messageQueue;
+	}
+}
+
+-->
+
+<!--  *********************************************** DATAMessage
+package br.ujr.xplane.comm.message;
+
+import java.nio.ByteBuffer;
+import java.nio.ByteOrder;
+
+public class DATAMessage extends UDPMessage {
+	
+	private int index;
+	private float[] txData;
+	private float[] rxData;
+	
+	public DATAMessage() {
+		setProlouge("DATA0");
+		txData = new float[8];
+		rxData = new float[8];
+		clear();
+	}
+	
+	public void clear() {
+		for (int i = 0; i < txData.length; i++) {
+			txData[i] = -999;
+		}
+	}
+	
+	@Override
+	public ByteBuffer toByteBuffer() {
+        ByteBuffer byteBuffer = ByteBuffer.allocate(getProlouge().length() + 4 + (txData.length * 4));
+    	String prolougue = getProlouge();
+    	
+    	byteBuffer.put(prolougue.getBytes());
+    	byteBuffer.order(ByteOrder.LITTLE_ENDIAN);
+    	byteBuffer.putInt(index);
+    	
+    	for (int i = 0; i < txData.length; i++) {
+    		byteBuffer.putFloat(txData[i]);
+    	}
+    	return byteBuffer;
+	}
+	
+	@Override
+	public ByteBuffer toByteBufferWithoutPrologue() {
+        ByteBuffer byteBuffer = ByteBuffer.allocate(4 + txData.length * 4);
+
+    	byteBuffer.order(ByteOrder.LITTLE_ENDIAN);
+    	byteBuffer.putInt(index);
+    	
+    	for (int i = 0; i < txData.length; i++) {
+    		byteBuffer.putFloat(txData[i]);
+    	}
+    	return byteBuffer;
+	}
+
+	
+	/*public String toString() {
+		String s = index + " - ";
+		return s;
+	}*/
+	
+	public int getIndex() {
+		return index;
+	}
+
+	public void setIndex(int index) {
+		this.index = index;
+	}
+
+	public float[] getTxData() {
+		return txData;
+	}
+
+	public void setTxData(float[] tXData) {
+		txData = tXData;
+	}
+
+	public float[] getRxData() {
+		return rxData;
+	}
+
+	public void setRxData(float[] rXData) {
+		rxData = rXData;
+	}
+}
+-->
+
+<!--   *********************************************** UDPMessage
+package br.ujr.xplane.comm.message;
+
+import java.nio.ByteBuffer;
+
+public abstract class UDPMessage {
+	
+	private String prolouge;
+
+	public String getProlouge() {
+		return prolouge;
+	}
+
+	public void setProlouge(String prolouge) {
+		this.prolouge = prolouge;
+	}
+
+	public abstract ByteBuffer toByteBuffer();
+	
+	public abstract ByteBuffer toByteBufferWithoutPrologue();
+	
+}
+-->
+
+<!--   *********************************************** DSELMessage
+package br.ujr.xplane.comm.message;
+import java.nio.ByteBuffer;
+import java.nio.ByteOrder;
+
+public class DSELMessage extends UDPMessage {
+	
+	private int[] data;
+	
+	public DSELMessage() {
+		setProlouge("DSEL0");
+	}
+	
+	public DSELMessage(int[] data) {
+		this();
+		this.data = data;
+	}
+
+	public DSELMessage(String data) {
+		this();
+		String aux[] = data.split(",");
+		this.data = new int[aux.length];
+		for (int i = 0; i < aux.length; i++) {
+			this.data[i] = Integer.parseInt(aux[i]);
+		}
+	}
+	
+	@Override
+	public ByteBuffer toByteBuffer() {
+        ByteBuffer byteBuffer = ByteBuffer.allocate(5 + (data.length  * 4));
+        
+    	String prolougue = getProlouge();
+    	byteBuffer.put(prolougue.getBytes());
+    	byteBuffer.order(ByteOrder.LITTLE_ENDIAN);
+    	
+    	for (int i = 0; i < data.length; i++) {
+    		byteBuffer.putInt(data[i]);
+    	}
+    	return byteBuffer;
+	}
+
+	public ByteBuffer toByteBufferWithoutPrologue() {
+		return null;
+	}
+}
+
+-->
